<resources>
    <string name="app_name">Sunka</string>
    <string name="single_player">Single Player</string>
    <string name="action_settings">Settings</string>
    <string name="two_player_local">Two Player Local</string>
    <string name="two_player_online">Two Player Online</string>
    <string name="statistics">Statistics</string>
    <string name="exit">Exit</string>
    <string name="title">Sunka</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="play">Play</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_two_player_local">TwoPlayerLocalActivity</string>
    <string name="title_activity_online_games">OnlineGames</string>
    <string name="create_server">Create Game</string>
    <string name="title_activity_two_player_online">TwoPlayerOnline</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_one_player_ai">One Player AI</string>
    <string name="refresh_list">Refresh List</string>
    <string name="title_activity_statistics">StatisticsActivity</string>

</resources>
