<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainScreen"
    android:orientation="vertical"
    android:background="@drawable/toucan_forest">


    <TextView
        android:id="@+id/title"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="62sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="60dp"
        android:background="@drawable/logo"
        android:gravity="center"/>

    <Button
        android:id="@+id/single_player"
        android:text="@string/single_player"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:layout_below="@id/title"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_screen_text_size"
        android:onClick="createAIDialog"
        android:background="@drawable/store2"/>
    <Button
        android:id="@+id/two_player_local"
        android:text="@string/two_player_local"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:layout_below="@id/single_player"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_screen_text_size"
        android:background="@drawable/store2"/>
    <Button
        android:id="@+id/two_player_online"
        android:text="@string/two_player_online"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:layout_below="@id/two_player_local"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_screen_text_size"
        android:background="@drawable/store2"/>
    <Button
        android:id="@+id/statistics"
        android:text="@string/statistics"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:layout_below="@id/two_player_online"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_screen_text_size"
        android:background="@drawable/store2"/>

    <Button
        android:id="@+id/exit"
        android:text="@string/exit"
        android:layout_width="@dimen/view_width"
        android:layout_height="@dimen/view_height"
        android:layout_below="@id/statistics"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/main_screen_text_size"
        android:background="@drawable/store2" />

</RelativeLayout>
